[tool.poetry]
name = "tileget"
version = "0.3.1"
description = "Tile download utility - easily download xyz-tile data"
authors = ["Kanahiro <mediterranean1769@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
shapely = "^2.0.3"
tiletanic = "^1.1.0"
pyproj = "^3.6.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
tileget = "tileget.__main__:main"